--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -393,6 +393,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:3750::b94;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
@@ -665,8 +666,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
