--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -138,7 +138,6 @@ allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
-allow 154.213.185.254;
 allow 154.213.186.70;
 allow 154.213.187.66;
 allow 154.213.187.98;
@@ -624,7 +623,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -884,6 +883,7 @@ allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
+allow 205.185.127.180;
 allow 205.185.127.231;
 allow 209.141.32.181;
 allow 209.141.32.198;
@@ -899,15 +899,9 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 212.95.50.77;
-allow 213.176.66.10;
-allow 213.176.66.2;
-allow 213.176.66.6;
-allow 213.176.66.7;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
-allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.64.151.21;
@@ -992,7 +986,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1056,6 +1049,7 @@ allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:a28:b37e:88e9:caa1:7b9c;
+allow 2605:6400:20:b0:c05d:ccd4:db99:babe;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
@@ -1563,8 +1557,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1592,10 +1586,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:596c::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:2859::1;
-allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:b60::1;
-allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1651,6 +1641,7 @@ allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
+allow 2a12:a800:2:1:45:141:215:226;
 allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
@@ -1711,6 +1702,7 @@ allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.21;
+allow 45.141.215.226;
 allow 45.141.215.28;
 allow 45.141.215.40;
 allow 45.141.215.56;
