--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -162,6 +162,7 @@ allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:a28:b37e:88e9:caa1:7b9c;
+allow 2605:6400:20:b0:c05d:ccd4:db99:babe;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
@@ -668,8 +669,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -697,10 +698,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:596c::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:2859::1;
-allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:b60::1;
-allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -756,6 +753,7 @@ allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
+allow 2a12:a800:2:1:45:141:215:226;
 allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
