--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -269,7 +269,6 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -952,6 +951,7 @@ allow 23.129.64.230;
 allow 23.137.248.100;
 allow 23.137.248.149;
 allow 23.137.248.152;
+allow 23.137.249.195;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.27;
@@ -986,6 +986,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1013,6 +1014,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:11:ca18::1;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
@@ -1583,8 +1585,6 @@ allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
-allow 2a0f:85c1:356:3238::1;
-allow 2a0f:85c1:356:596c::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1774,6 +1774,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1811,10 +1812,8 @@ allow 5.79.66.19;
 allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
-allow 65.87.7.42;
 allow 66.146.193.33;
 allow 66.220.242.222;
-allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
