--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -269,7 +269,6 @@ set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -952,6 +951,7 @@ set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.149;
 set_real_ip_from 23.137.248.152;
+set_real_ip_from 23.137.249.195;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.27;
@@ -986,6 +986,7 @@ set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
+set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.173.216.67;
@@ -1013,6 +1014,7 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
+set_real_ip_from 2602:fc24:11:ca18::1;
 set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1583,8 +1585,6 @@ set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:e701:1198::1;
-set_real_ip_from 2a0f:85c1:356:3238::1;
-set_real_ip_from 2a0f:85c1:356:596c::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1774,6 +1774,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1811,10 +1812,8 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
 set_real_ip_from 62.182.84.146;
-set_real_ip_from 65.87.7.42;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
-set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
