--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -208,7 +208,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.183.131;
+set_real_ip_from 178.31.96.242;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -623,7 +623,7 @@ set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
 set_real_ip_from 195.47.238.89;
-set_real_ip_from 195.47.238.91;
+set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -951,7 +951,6 @@ set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.149;
 set_real_ip_from 23.137.248.152;
-set_real_ip_from 23.137.249.195;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.27;
@@ -1014,7 +1013,6 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
-set_real_ip_from 2602:fc24:11:ca18::1;
 set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1559,7 +1557,7 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
@@ -1681,6 +1679,7 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
