--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -139,7 +139,7 @@ allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.186.70;
-allow 154.213.187.98;
+allow 154.213.187.66;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
@@ -604,6 +604,7 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.132.21;
 allow 193.41.226.117;
+allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -620,8 +621,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.88;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1356,6 +1356,7 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
+allow 2a05:b0c7:6cc4::1;
 allow 2a05:b0c7:6e37::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1552,8 +1553,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1674,7 +1673,6 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1830,7 +1828,6 @@ allow 80.94.92.106;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 82.117.87.62;
 allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.197.182.161;
