--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -139,7 +139,7 @@ deny 154.213.185.183;
 deny 154.213.185.185;
 deny 154.213.185.230;
 deny 154.213.186.70;
-deny 154.213.187.98;
+deny 154.213.187.66;
 deny 154.26.159.157;
 deny 158.69.1.13;
 deny 160.119.249.240;
@@ -604,6 +604,7 @@ deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.36.132.21;
 deny 193.41.226.117;
+deny 193.70.80.213;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
@@ -620,8 +621,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.92;
-deny 195.47.238.93;
+deny 195.47.238.88;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1356,6 +1356,7 @@ deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
+deny 2a05:b0c7:6cc4::1;
 deny 2a05:b0c7:6e37::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -1552,8 +1553,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1674,7 +1673,6 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.247;
 deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1830,7 +1828,6 @@ deny 80.94.92.106;
 deny 80.94.92.92;
 deny 81.16.33.42;
 deny 81.17.28.95;
-deny 82.117.87.62;
 deny 82.153.138.119;
 deny 8.218.9.41;
 deny 82.197.182.161;
